Website redesign phase 1

--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -141,6 +141,11 @@ permalink: /accessible-website-design/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -186,7 +191,7 @@ permalink: /accessible-website-design/
                 </ol>
                 <p>Date published: 10 March 2024 | by Sybil Mayard</p>
 
-                <p>Designing an <strong>accessible website</strong> involves creating a website that caters to as many types of user as possible, including those with visual/hearing impairments and disabilities. In this blog post, I provide you with a few quick tips for improving the accessibility of your site. I will be adding to this article in future, so keep checking back for further updates.</p>
+                <p>Designing an <strong>accessible website</strong> involves creating a website that caters to as many types of user as possible, including those with visual/hearing impairments and disabilities. In this blog post, I provide you with a few quick tips for improving the accessibility of your site. we will be adding to this article in future, so keep checking back for further updates.</p>
 
                 <h2>1. Contrast Ratio</h2>
 
@@ -251,18 +256,18 @@ permalink: /accessible-website-design/
 
                 <p>A useful checklist can also be found on the <a href="https://www.a11yproject.com/checklist/" target="_blank" rel="noopener noreferrer">A11Y Project</a> website.</p>
 
-                <p>If you are looking to improve the accessibility of your website, please feel free to <a href="https://sybiltec.com/contact/">contact me</a>.</p>
+                <p>If you are looking to improve the accessibility of your website, please feel free to <a href="https://sybiltec.com/contact/">contact us</a>.</p>
             </div>
         </div>
         <div class="contact section">
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
