--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -32,13 +32,13 @@ permalink: /ecommerce-websites/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>E-commerce Websites | Erith South East London | Sybiltec</title>       
-        <meta name="Description" content="An e-commerce website is required for selling products and/or services online. Contact me for an online store built on WooCommerce or Shopify.">
+        <meta name="Description" content="An e-commerce website is required for selling products and/or services online. Contact us for an online store built on WooCommerce or Shopify.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/ecommerce-websites/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="E-commerce Websites | Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="An e-commerce website is required for selling products and/or services online. Contact me for an online store built on WooCommerce or Shopify." />
+        <meta property="og:description" content="An e-commerce website is required for selling products and/or services online. Contact us for an online store built on WooCommerce or Shopify." />
         <meta property="og:url" content="https://sybiltec.com/ecommerce-websites/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -118,6 +118,11 @@ permalink: /ecommerce-websites/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -181,7 +186,7 @@ permalink: /ecommerce-websites/
 
                 <h3>E-commerce Website Migration</h3>
 
-                <p>Are you dissatisfied with your current e-commerce platform? If you have an existing e-commerce site which you're looking to migrate, then I can also support you with this. I will help you to transfer your design, products, pages and forms to the new website, which will be built on Shopify or WooCommerce.</p>
+                <p>Are you dissatisfied with your current e-commerce platform? If you have an existing e-commerce site which you're looking to migrate, then I can also support you with this. we will help you to transfer your design, products, pages and forms to the new website, which will be built on Shopify or WooCommerce.</p>
 
                 <h2>Who This Service Suitable is For</h2>
 
@@ -189,9 +194,9 @@ permalink: /ecommerce-websites/
 
                 <h2>What the Process Involves</h2>
 
-                <p>I will begin by getting to know your business, and your purpose for building the website. I will gather your requirements and present you with the best solution. I'll provide you with a quote, and if you indicate that you are happy to proceed, then I will send you an agreement via email and an invoice for the deposit, which is usually 33% of the total amount to be paid. Once I have received the signed agreement and the deposit, I will begin with the work.</p>
+                <p>we will begin by getting to know your business, and your purpose for building the website. we will gather your requirements and present you with the best solution. I'll provide you with a quote, and if you indicate that you are happy to proceed, then we will send you an agreement via email and an invoice for the deposit, which is usually 33% of the total amount to be paid. Once I have received the signed agreement and the deposit, we will begin with the work.</p>
 
-                <p>I will create an initial design for your website and send you a link to this design for your review and feedback. I'll revise the design according to your comments, and when we have a design that we are both happy with, I will proceed to build the website on Shopify or WooCommerce.</p>
+                <p>we will create an initial design for your website and send you a link to this design for your review and feedback. I'll revise the design according to your comments, and when we have a design that we are both happy with, we will proceed to build the website on Shopify or WooCommerce.</p>
 
                 <p>Please send me the content that you wish to be uploaded to the website, including:</p>
                 <ul>
@@ -414,18 +419,18 @@ permalink: /ecommerce-websites/
                     </div>
                 </div>
 
-                <p>Are you a business owner in <strong>Bexley</strong> or the surrounding areas looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact me</a> today.</p>
+                <p>Are you a business owner in <strong>Bexley</strong> or the surrounding areas looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact us</a> today.</p>
             </div>
         </div>
         <div class="contact section">
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
