--- a/how-to-choose-web-designer.html
+++ b/how-to-choose-web-designer.html
@@ -141,6 +141,11 @@ permalink: /how-to-choose-web-designer/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -271,18 +276,18 @@ permalink: /how-to-choose-web-designer/
 
                 <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. This blog post provided advice on how you can choose the best web designer for your project.</p>
 
-                <p>If you are looking for a web designer in Bexley or the surrounding areas, why not <a href="https://sybiltec.com/contact/">contact me</a> to discuss your requirements!</p>
+                <p>If you are looking for a web designer in Bexley or the surrounding areas, why not <a href="https://sybiltec.com/contact/">contact us</a> to discuss your requirements!</p>
             </div>
         </div>
         <div class="contact section">
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
