--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sybiltec: Web Design for Small Businesses | London Kent Surrey</title>       
-        <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
+        <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact us for a free consultation.">
         <meta name="robots" content="noindex">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Sybiltec: Web Design for Small Businesses | London Kent Surrey" />
-        <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
+        <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact us for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -95,13 +95,13 @@
         }
         }
         </script>
-        <link rel="stylesheet" href="styles2.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png"> 
     </head>
     <body>
         <div class="announcement-bar">
             <div class="container-1140">
-                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a><i class="fa-solid fa-phone"></i><a href="tel:00447768059730">07768059730</a></span>
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
             </div>
         </div>
         <div class="header">
@@ -134,11 +134,14 @@
         <div class="hero">
             <div class="container-1140">
                 <div class="row">
-                    <div class="col-12">
-                        <h1>Designing websites that <u>make an impact</u></h1>
+                    <div class="col-6">
+                        <h1>Designing websites that make an impact</h1>
                         <h2 class="padding-bottom">A web designer supporting small businesses in London, Kent, Surrey, all across the UK and beyond.</h2>
                         <h3 class="padding-bottom"><i class="fa-solid fa-check"></i><span>Web Design</span><i class="fa-solid fa-check"></i><span>Web Development</span><i class="fa-solid fa-check"></i><span>Website Maintenance</span></h3>
                         <a id="btn-contact" class="btn-primary" href="#contact">Start Your Project Today</a>
+                    </div>
+                    <div class="col-6">
+                        <img src="images/clients/tech-diplomacy-academy.png" alt="Tech Diplomacy Academy">
                     </div>
                 </div>
             </div>
@@ -220,34 +223,37 @@
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="" class="avatar">
-                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
-                        <p>Fantastic service!</p>
+                        <img src="images/zitka-stone.png" class="avatar">
+                        <p><strong><em>Zita Stone, NeroWireArt</em></strong></p>
+                        <p>Outstanding support and ongoing experience of working with Sybil @Sybiltec. Her suggestions on the design, comms management and assistance with any problem resolution have been second to none. Amazing service, thank you!</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="" class="avatar">
-                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
-                        <p>Fantastic service!</p>
+                        <img src="images/gary-parker.png" class="avatar">
+                        <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
+                        <p>Sybil is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon free and understandable. Her work is of a high quality and she is able to work both as part of a team and on her own initiative.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="" class="avatar">
-                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
-                        <p>Fantastic service!</p>
+                        <img src="images/hany-abdelkhalek.png" class="avatar">
+                        <p><strong><em>Hany Abdelkhalek</em></strong></p>
+                        <p>Sybil is a highly skilled developer whom I had the pleasure of working with on a small landing pages project. I would highly recommend Sybil to anyone in need of a professional-looking website, especially if they're unsure where to begin.</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="" class="avatar">
-                        <p><strong>Natalie Wright, Finance Director, LD Tiling Contractors</strong></p>
-                        <p>Fantastic service!</p>
+                        <img src="images/aurore-lacabe.png" class="avatar">
+                        <p><strong><em>Aurore Lacabe, Voice Teacher</em></strong></p>
+                        <p>Sybil was reliable and really supportive throughout the making of my website. I am really happy with the final result and would wholeheartedly recommend Sybil to anyone who needs a website and wants it to have a professional look.</p>
                     </div>
                 </div>
+            </div>
+            <div class="center padding-top">
+                <a class="btn-secondary" href="https://search.google.com/local/reviews?placeid=ChIJkyt7fOQ4mSoRztRY0SmLep4" target="_blank" rel="noopener noreferrer">See All Reviews >></a>   
             </div>
         </div>
         <div class="blog section">
@@ -338,11 +344,11 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
