--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -140,6 +140,11 @@ permalink: /web-design-process-explained-12-easy-steps/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -188,40 +193,40 @@ permalink: /web-design-process-explained-12-easy-steps/
                 <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the <strong>web design process</strong> is like, I've outlined the steps below to help you understand what is involved.</p>
 
                 <h2>1. Initial Consultation</h2>
-                <p>You've shown interest in my services, so the first step will be for us to discuss your requirements and determine whether I'd be a good fit for your project. This consultation will be in the form of a Zoom call or an in-person meeting, depending on your location. I will ask you questions about yourself, your business, your requirements for the website and what you would like your website to achieve. To maximise our time together, I recommend that you do a little preparation before the meeting so please think about aspects such as website structure/content, branding, your budget, your preferred website builder platform, and additional services you may need (e.g. copywriting, SEO, logo design etc.) You'll also have the opportunity to ask me any relevant questions about my background, skills, services and pricing. After the meeting I'll send a follow-up email to summarise what we discussed along with a quote for the services to be provided.</p>
+                <p>You've shown interest in my services, so the first step will be for us to discuss your requirements and determine whether I'd be a good fit for your project. This consultation will be in the form of a Zoom call or an in-person meeting, depending on your location. we will ask you questions about yourself, your business, your requirements for the website and what you would like your website to achieve. To maximise our time together, I recommend that you do a little preparation before the meeting so please think about aspects such as website structure/content, branding, your budget, your preferred website builder platform, and additional services you may need (e.g. copywriting, SEO, logo design etc.) You'll also have the opportunity to ask me any relevant questions about my background, skills, services and pricing. After the meeting I'll send a follow-up email to summarise what we discussed along with a quote for the services to be provided.</p>
 
                 <h2>2. Paperwork</h2>
-                <p>You've chosen to go ahead with the project, and you have let me know that you want to get started right away - great! I will send you an agreement summarising my terms, which will need to be signed and dated by you. I will also ask for a deposit to be paid, which will be 25-50% of the total cost. Once I have received the signed agreement and the deposit, I will begin the work.</p>
+                <p>You've chosen to go ahead with the project, and you have let me know that you want to get started right away - great! we will send you an agreement summarising my terms, which will need to be signed and dated by you. we will also ask for a deposit to be paid, which will be 25-50% of the total cost. Once I have received the signed agreement and the deposit, we will begin the work.</p>
 
                 <h2>3. Sitemap</h2>
-                <p>Based on what we discussed during the initial consultation, I will create a sitemap of the website. This is a diagram that outlines all of the pages and how they are linked together. The sitemap helps us to determine the structure of the website and to identify how the website can provide your visitors with the best experience possible. Click <a href="https://drive.google.com/file/d/1LoEZ5FUMFVi9wgWL2EBNb-f967I2TIM3/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a> for a sample sitemap. </p>
+                <p>Based on what we discussed during the initial consultation, we will create a sitemap of the website. This is a diagram that outlines all of the pages and how they are linked together. The sitemap helps us to determine the structure of the website and to identify how the website can provide your visitors with the best experience possible. Click <a href="https://drive.google.com/file/d/1LoEZ5FUMFVi9wgWL2EBNb-f967I2TIM3/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a> for a sample sitemap. </p>
 
                 <h2>4. Homepage Design</h2>
-                <p>Your homepage is usually the first page that your visitors will see, so I'll begin with creating the homepage design. I will create a design keeping in mind the branding requirements that we discussed during our initial consultation (colours, fonts, logos, look and feel). The design will be produced using the online prototyping tool Figma. Once complete, I will send you a link to the design for review. You will be able to view and scroll the design in your browser just like an actual webpage, but as this is a prototype, functionality will be limited i.e. buttons and links won't be clickable. I may also use placeholder images and text - these are temporary, and will be replaced with the actual images and text later during the website build process. Please allow three working days for the homepage design to be created.</p>
+                <p>Your homepage is usually the first page that your visitors will see, so I'll begin with creating the homepage design. we will create a design keeping in mind the branding requirements that we discussed during our initial consultation (colours, fonts, logos, look and feel). The design will be produced using the online prototyping tool Figma. Once complete, we will send you a link to the design for review. You will be able to view and scroll the design in your browser just like an actual webpage, but as this is a prototype, functionality will be limited i.e. buttons and links won't be clickable. I may also use placeholder images and text - these are temporary, and will be replaced with the actual images and text later during the website build process. Please allow three working days for the homepage design to be created.</p>
 
                 <h2>5. 1st Design Review</h2>
                 <p>Once you have received the link to the homepage design and had time to review it thoroughly, please provide me with your feedback. There is no particular format for this - you can comment directly on the Figma file, or send your comments via email, or if you prefer, we can schedule a meeting and discuss your feedback if that is easier. It's totally up to you!</p>
 
                 <h2>6. Amendments and 2nd Design Review</h2>
-                <p>You've given me your feedback, so I will make the changes to the homepage design accordingly. Once again, I will ask you to review this second version of the design. I do ask that we limit the number of revisions to two, however, if you would like me to make additional revisions please let me know. Each additional revision will be charged at a rate of £150.00.</p>
+                <p>You've given me your feedback, so we will make the changes to the homepage design accordingly. Once again, we will ask you to review this second version of the design. I do ask that we limit the number of revisions to two, however, if you would like me to make additional revisions please let me know. Each additional revision will be charged at a rate of £150.00.</p>
 
                 <h2>7. Designs For the Other Pages</h2>
-                <p>I will design the rest of the pages of your website, following the same process as outlined in steps 4 and 5, above. All pages will be designed in line with the design of the homepage.</p>
+                <p>we will design the rest of the pages of your website, following the same process as outlined in steps 4 and 5, above. All pages will be designed in line with the design of the homepage.</p>
 
                 <h2>8. Website Build</h2>
-                <p>It's time to start developing your website! During our initial consultation, you would have indicated whether you have a preference for the platform to be used for building your website. If you do not have a preference, I will choose the platform which is most suited to your requirements (Wix, WordPress or Shopify). The website build process takes around 1-2 weeks to complete.</p>
+                <p>It's time to start developing your website! During our initial consultation, you would have indicated whether you have a preference for the platform to be used for building your website. If you do not have a preference, we will choose the platform which is most suited to your requirements (Wix, WordPress or Shopify). The website build process takes around 1-2 weeks to complete.</p>
 
                 <h2>9. Domain and Email Setup</h2>
                 <p>If you have already purchased a domain, please grant me access to your domain provider so I can configure the domain and connect it to your website. If you do not have a domain already, then I can work with you to identify the best domain (and email) package for your needs. Once your domain has been connected to your website, it will be live on the internet but I'll ensure that it isn't indexed by search engines, so it won't show up in search engine results pages (SERPs).</p>
 
                 <h2>10. Testing</h2> 
-                <p>To ensure that your website functions well, I will carry out thorough testing. This stage includes testing of links, buttons, contact forms, newsletter signup forms and any other systems associated with the website (e.g. email marketing platform). I will check every page to ensure that text, images and any other components are displaying correctly on both desktop and mobile devices. Finally, I will proofread all content that is written in English (if you have provided me with any non-English content, I do ask if you can ensure that it has been proofread). </p>
+                <p>To ensure that your website functions well, we will carry out thorough testing. This stage includes testing of links, buttons, contact forms, newsletter signup forms and any other systems associated with the website (e.g. email marketing platform). we will check every page to ensure that text, images and any other components are displaying correctly on both desktop and mobile devices. Finally, we will proofread all content that is written in English (if you have provided me with any non-English content, I do ask if you can ensure that it has been proofread). </p>
 
                 <h2>11. Launch</h2>
                 <p>Congratulations, your website is now live! A few more tasks need to be done, including submitting your website to Google Search Console to track search performance, and setting up Google Analytics to monitor visitor behaviour. You will be provided with access to all of the relevant platforms. </p>
 
                 <h2>12. Post-Launch</h2>
-                <p>I'm confident that you will be delighted with your new website, however, if you do have any questions or concerns, please reach out to me as soon as possible and I'll do my best to resolve the issue. If you have indicated that you would like to edit the website yourself, I will arrange a session with you to explain how to make changes to the website. Alternatively, you can choose one of my website maintenance packages if you would prefer for me to handle the website changes. Finally, I will ask you to provide me with a Google Review (I may publish your review on other platforms such as social media or on my website).</p>
+                <p>I'm confident that you will be delighted with your new website, however, if you do have any questions or concerns, please reach out to me as soon as possible and I'll do my best to resolve the issue. If you have indicated that you would like to edit the website yourself, we will arrange a session with you to explain how to make changes to the website. Alternatively, you can choose one of my website maintenance packages if you would prefer for me to handle the website changes. Finally, we will ask you to provide me with a Google Review (I may publish your review on other platforms such as social media or on my website).</p>
 
 
             </div>
@@ -230,11 +235,11 @@ permalink: /web-design-process-explained-12-easy-steps/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
