--- a/404.html
+++ b/404.html
@@ -30,13 +30,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Page Not Found | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web development services 
-        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
+        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or website review.">
         <meta name="robots" content="noindex" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Page Not Found | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
-        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
+        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/404" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -117,6 +117,11 @@
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -177,11 +182,11 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
