--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -140,6 +140,11 @@ permalink: /6-reasons-to-use-shopify/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -199,7 +204,7 @@ permalink: /6-reasons-to-use-shopify/
                     3 days and you won't be charged.</p>
                 <p>If you need more time to work on your store before committing to a paid
                     plan, as a <strong>Shopify Partner</strong> I can give you access to an unlimited trial store - 
-                    please <a href="https://sybiltec.com/contact/">contact me</a> and I can set this up for you!
+                    please <a href="https://sybiltec.com/contact/">contact us</a> and I can set this up for you!
                 </p>
 
                 <h2>2. Customise Your Theme Without Knowledge of Coding</h2>
@@ -281,7 +286,7 @@ permalink: /6-reasons-to-use-shopify/
                     customer, based on their location.</p>
 
                 <h2>Conclusion</h2>
-                <p>If you are planning to start an online store, then consider using Shopify, the complete commerce solution for small and large businesses alike. Out of the box, Shopify offers everything you need to start selling, including customisable themes, SEO tools, low credit card fees and discount codes. <a href="https://sybiltec.com/contact/">Contact me</a> today if you are a business owner looking for support with building your Shopify store.</p>
+                <p>If you are planning to start an online store, then consider using Shopify, the complete commerce solution for small and large businesses alike. Out of the box, Shopify offers everything you need to start selling, including customisable themes, SEO tools, low credit card fees and discount codes. <a href="https://sybiltec.com/contact/">Contact us</a> today if you are a business owner looking for support with building your Shopify store.</p>
 
             </div>
         </div>
@@ -289,11 +294,11 @@ permalink: /6-reasons-to-use-shopify/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
