--- a/about.html
+++ b/about.html
@@ -120,6 +120,11 @@ permalink: /about/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -184,7 +189,7 @@ permalink: /about/
                 <p>Click the button below to find out how I can help take your business to the next level.</p>
                 
                 <div class="padding-top padding-bottom">
-                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact me</a>
+                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact us</a>
                 </div>
 
                 <div class="center">
@@ -280,11 +285,11 @@ permalink: /about/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
