--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -142,6 +142,11 @@ permalink: /backup-wordpress-website-using-updraftplus/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -241,7 +246,7 @@ permalink: /backup-wordpress-website-using-updraftplus/
 
                 <p>Backing up your website is an important aspect of your website maintenance activities. It's likely that you'll have spent a great deal of time and money on developing your website, so it's vital to have a copy of your website's content in case of loss of data. In this article we discussed the processing for backing up your website on WordPress using the UpdraftPlus plugin.</p>
 
-                <p>If you need help with backing up your WordPress website, feel free to <a href="https://sybiltec.com/contact/">contact me</a>.</p>
+                <p>If you need help with backing up your WordPress website, feel free to <a href="https://sybiltec.com/contact/">contact us</a>.</p>
 
             </div>
         </div>
@@ -249,11 +254,11 @@ permalink: /backup-wordpress-website-using-updraftplus/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
