--- a/best-free-wordpress-plugins.html
+++ b/best-free-wordpress-plugins.html
@@ -141,6 +141,11 @@ permalink: /best-free-wordpress-plugins/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -206,7 +211,7 @@ permalink: /best-free-wordpress-plugins/
 
                 <h2>5. WooCommerce</h2>
 
-                <p>Are you planning to sell your products and/or services online? If so, you don't have to create a new website, as you can set up an e-commerce store directly on your WordPress site. To achieve this, use the WooCommerce plugin, which includes everything you need to create an online store. It can take some time to make the necessary configurations, as you will need to create your products, set up shipping options and configure your payment gateway. If you need some help with creating your WooCommerce store, don't hesitate to <a href="https://sybiltec.com/contact/">contact me</a>!</p>
+                <p>Are you planning to sell your products and/or services online? If so, you don't have to create a new website, as you can set up an e-commerce store directly on your WordPress site. To achieve this, use the WooCommerce plugin, which includes everything you need to create an online store. It can take some time to make the necessary configurations, as you will need to create your products, set up shipping options and configure your payment gateway. If you need some help with creating your WooCommerce store, don't hesitate to <a href="https://sybiltec.com/contact/">contact us</a>!</p>
 
                 <h2>6. WP File Manager</h2>
 
@@ -242,11 +247,11 @@ permalink: /best-free-wordpress-plugins/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
