--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -141,6 +141,11 @@ permalink: /common-website-mistakes/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -244,18 +249,18 @@ permalink: /common-website-mistakes/
                 <h2>Conclusion</h2>
                 <p>When creating a website, there are many things that need to be taken into consideration. If these factors are overlooked, you could end up with a website that looks unprofessional, is not SEO-friendly, or doesn't provide your customers with the best user experience. In this article, I outlined 10 common pitfalls of website design and how they can be avoided.</p>
 
-                <p>If you need help with improving your website, why not <a href="https://sybiltec.com/contact/">contact me</a> for a free consultation?</p>
+                <p>If you need help with improving your website, why not <a href="https://sybiltec.com/contact/">contact us</a> for a free consultation?</p>
             </div>
         </div>
         <div class="contact section">
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
