--- a/faqs.html
+++ b/faqs.html
@@ -165,7 +165,7 @@ permalink: /faqs/
                 "name": "What are your payment terms?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "For website design or website development projects, I will ask for a deposit which will be 25-50% of the total cost, depending on the size of the project. The remainder of the payments will be taken throughout the project and upon project completion."
+                  "text": "For website design or website development projects, we will ask for a deposit which will be 25-50% of the total cost, depending on the size of the project. The remainder of the payments will be taken throughout the project and upon project completion."
                 }
               }, {
                 "@type": "Question",
@@ -186,7 +186,7 @@ permalink: /faqs/
                 "name": "I cannot find the answer to my question in these FAQs. How can I contact you?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "Please contact me. I look forward to hearing from you."
+                  "text": "Please contact us. I look forward to hearing from you."
                 }
               }
                 
@@ -282,6 +282,11 @@ permalink: /faqs/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -413,7 +418,7 @@ permalink: /faqs/
                 <p>Of course, please see the <a href="https://sybiltec.com/website-design/">Website Design</a> page for examples of web design projects I have completed for past clients.</p>
 
                 <h3>What are your payment terms?</h3>
-                <p>For website design or website development projects, I will ask for a deposit which will be 25-50% of the total cost, depending on the size of the project. The remainder of the payments will be taken throughout the project and upon project completion.</p>
+                <p>For website design or website development projects, we will ask for a deposit which will be 25-50% of the total cost, depending on the size of the project. The remainder of the payments will be taken throughout the project and upon project completion.</p>
 
                 <h3>What payment methods do you accept?</h3>
                 <p>I accept payments via bank transfer for all services.</p>
@@ -424,18 +429,18 @@ permalink: /faqs/
                 <p>My most recent qualification is an MSc in Computer Science from the University of Kent.</p>
 
                 <h3>I cannot find the answer to my question in these FAQs. How can I contact you?</h3>
-                <p>Please contact me. I look forward to hearing from you.</p>
+                <p>Please contact us. I look forward to hearing from you.</p>
             </div>
         </div>
         <div class="contact section">
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
