--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -141,6 +141,11 @@ permalink: /fix-slow-wordpress-website/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -276,7 +281,7 @@ permalink: /fix-slow-wordpress-website/
 
                 <h2>Conclusion</h2>
 
-                <p>Several factors can impact the speed of a WordPress website. A fast loading site is essential for a good user experience and also improves search engine optimisation. In this blog post I discussed 10 steps you can take to minimise this impact, ensuring that your website is as fast as possible. If you need help with any of the above, please feel free to <a href="https://sybiltec.com/contact/">contact me</a>. </p>
+                <p>Several factors can impact the speed of a WordPress website. A fast loading site is essential for a good user experience and also improves search engine optimisation. In this blog post I discussed 10 steps you can take to minimise this impact, ensuring that your website is as fast as possible. If you need help with any of the above, please feel free to <a href="https://sybiltec.com/contact/">contact us</a>. </p>
 
                 <h2>References</h2>
 
@@ -288,11 +293,11 @@ permalink: /fix-slow-wordpress-website/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
