--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -142,6 +142,11 @@ permalink: /improve-website-seo/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -194,7 +199,7 @@ permalink: /improve-website-seo/
 
                 <h2>Why Do You Need SEO?</h2>
 
-                <p>You've designed and built a beautiful website, but the hard work doesn't stop there. Your website is not going to make you money if no one knows it exists. Therefore, it is essential to work on your marketing efforts. One of the most effective ways to increase traffic to your website is through search, so the next step is to work on the SEO of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). In this article, I will discuss 11 ways in which you can improve your website's SEO.</p>
+                <p>You've designed and built a beautiful website, but the hard work doesn't stop there. Your website is not going to make you money if no one knows it exists. Therefore, it is essential to work on your marketing efforts. One of the most effective ways to increase traffic to your website is through search, so the next step is to work on the SEO of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). In this article, we will discuss 11 ways in which you can improve your website's SEO.</p>
 
                 <h2>1. Do Your Keyword Research</h2>
 
@@ -287,11 +292,11 @@ permalink: /improve-website-seo/
 
                 <p>Consider these two examples of anchor text:</p>
                 <ol>
-                    <li>If you need help with web design, <u>click here</u> to contact me.</li>
-                    <li>If you need help with web design, <u>contact me</u> today.</li>
+                    <li>If you need help with web design, <u>click here</u> to contact us.</li>
+                    <li>If you need help with web design, <u>contact us</u> today.</li>
                 </ol>
 
-                <p>The second example is much better from both an SEO and user perspective, as the "contact me" anchor text tells me (and search engines) that it links to a Contact page.</p>
+                <p>The second example is much better from both an SEO and user perspective, as the "contact us" anchor text tells me (and search engines) that it links to a Contact page.</p>
 
                 <h2>7. Connect Your Website to Google Search Console</h2>
 
@@ -353,7 +358,7 @@ permalink: /improve-website-seo/
 
                 <p>Once you have launched your website, you need to work on ways to generate traffic and enquiries on your website. One such method is SEO, which gives your web pages the best possible chances of appearing in search results. This article listed 11 ways in which you can improve your website's SEO.</p>
 
-                <p>If you need help with any of the techniques I mentioned above, please feel free to <a href="https://sybiltec.com/contact/">contact me</a>.</p>
+                <p>If you need help with any of the techniques I mentioned above, please feel free to <a href="https://sybiltec.com/contact/">contact us</a>.</p>
 
                 <h2>References</h2>
 
@@ -365,11 +370,11 @@ permalink: /improve-website-seo/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
