--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sybiltec: Web Design for Small Businesses | London Kent Surrey</title>       
-        <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
+        <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact us for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Sybiltec: Web Design for Small Businesses | London Kent Surrey" />
-        <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
+        <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact us for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -99,6 +99,11 @@
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png"> 
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -132,7 +137,7 @@
                     <div class="col-12">
                         <h1>Web Design for the Serious Business Owner</h1>
                         <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting small businesses in South East London</h2>
-                        <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -154,7 +159,7 @@
                 <div class="row">
                     <div class="col-6"><h2>Your Website Worries - Sorted!</h2>
                         <p>Website problems - we all have them. As a <strong>small business owner</strong>, it's likely that you've faced one or more of these issues at some stage during the development of your online presence. Here is a list of recent website problems that my clients have complained about; if you can relate to any of these, get in touch with me today to discuss the best solution for you.</p>
-                        <div class="padding-top"><a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a></div>
+                        <div class="padding-top"><a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a></div>
                     </div>
                     <div class="col-6">
                         <ul class="fa-ul">
@@ -176,7 +181,7 @@
                         <div class="offer-card center">
                             <i class="fa-solid fa-laptop"></i>
                         <h3>Custom Website Design</h3>
-                        <p>If you are looking to create a website that is as unique as you are, I will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
+                        <p>If you are looking to create a website that is as unique as you are, we will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-primary" href="https://sybiltec.com/website-design/">Web Design</a>   
                         </div>
@@ -186,7 +191,7 @@
                         <div class="offer-card center">
                             <i class="fa-regular fa-file-image"></i>
                         <h3>E-commerce Websites</h3>
-                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business on Shopify or WooCommerce.</p>
+                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. we will design and build an online store for your business on Shopify or WooCommerce.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>   
                         </div>
@@ -196,7 +201,7 @@
                         <div class="offer-card center">
                             <i class="fas fa-tools"></i>
                         <h3>Website Maintenance</h3>
-                        <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
+                        <p>As a business owner, you're most likely a very busy person with little time to spare! we will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-primary" href="https://sybiltec.com/website-maintenance/">Web Maintenance</a>   
                         </div>
@@ -453,11 +458,11 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
