--- a/services.html
+++ b/services.html
@@ -32,11 +32,11 @@ permalink: /services/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Services | Freelance Web Designer South East London | Sybiltec</title>       
-        <meta name="Description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact me today for a quote.">
+        <meta name="Description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact us today for a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Services | Freelance Web Designer South East London | Sybiltec" />
-        <meta property="og:description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact me today for a quote." />
+        <meta property="og:description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact us today for a quote." />
         <meta property="og:url" content="https://sybiltec.com/services/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -117,6 +117,11 @@ permalink: /services/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -165,10 +170,10 @@ permalink: /services/
                     <div class="col-4">
                         <div class="offer-card center">
                             <i class="fa-solid fa-laptop"></i>
-                        <h3>Custom Website Design</h3>
-                        <p>If you are looking to create a website that is as unique as you are, I will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
+                        <h3>Small Business Websites</h3>
+                        <p>If you are looking to create a website that is as unique as you are, we will design a professional, responsive and user-friendly website that perfectly reflects your brand and style.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-design/">Web Design</a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/website-design/">Web Design >></a>   
                         </div>
                         </div>
                     </div>
@@ -176,9 +181,9 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-regular fa-file-image"></i>
                         <h3>E-commerce Websites</h3>
-                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business on Shopify or WooCommerce.</p>
+                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. We will design and build an online store for your business on Shopify or WooCommerce.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites >></a>   
                         </div>
                         </div>
                     </div>
@@ -186,9 +191,9 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fas fa-tools"></i>
                         <h3>Website Maintenance</h3>
-                        <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
+                        <p>As a business owner, you're most likely a very busy person with little time to spare! We will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-maintenance/">Web Maintenance</a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/website-maintenance/">Web Maintenance >></a>   
                         </div>
                         </div>
                     </div>
@@ -198,9 +203,9 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-regular fa-file-image"></i>
                     <h3>Leaflet Design</h3>
-                    <p>If you need a flyer, poster or social media graphic created for your upcoming event, choose my leaflet design service.</p>
+                    <p>If you need a flyer, poster or social media graphic created for your upcoming event, choose our leaflet design service.</p>
                     <div class="center padding-bottom padding-top">
-                        <a class="btn-primary" href="https://sybiltec.com/leaflet-design/">Leaflet Design</a>   
+                        <a class="btn-secondary" href="https://sybiltec.com/leaflet-design/">Leaflet Design >></a>   
                     </div>
                     </div>
                     </div>
@@ -210,7 +215,7 @@ permalink: /services/
                         <h3>Website Review</h3>
                         <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-review/">Website Review</a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/website-review/">Website Review >></a>   
                         </div>
                         </div>
                     </div>
@@ -218,9 +223,9 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-solid fa-graduation-cap"></i>
                         <h3>Training</h3>
-                        <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
+                        <p>Do you need a facilitator for your training event? We can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/training/">Training</a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/training/">Training >></a>   
                         </div>
                         </div>
                     </div>
@@ -231,11 +236,11 @@ permalink: /services/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
