--- a/user-experience-ux.html
+++ b/user-experience-ux.html
@@ -141,6 +141,11 @@ permalink: /user-experience-ux/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -192,7 +197,7 @@ permalink: /user-experience-ux/
 
                 <p>When designing and building a website, your visitors' experience should always be your top priority. An enjoyable browsing experience means more engagement, more enquiries and ultimately, more sales.</p>
 
-                <p>In this blog article, I will offer you 9 ways in which you can improve the user experience of your website or online store.</p>
+                <p>In this blog article, we will offer you 9 ways in which you can improve the user experience of your website or online store.</p>
 
                 <h2>1. Ensure that Your Website Loads Fast</h2>
 
@@ -277,7 +282,7 @@ permalink: /user-experience-ux/
 
                 <h2>Conclusion</h2>
 
-                <p>User experience is a very important aspect of website design. Your website visitors must be given the best possible experience when browsing your website, in order to keep engagement high and bounce rates low. In this article, I discussed tips and advice on how to improve your website's user experience. If you need support with this area, please feel free to <a href="mailto:info@sybiltec.com" target="_blank">contact me</a>.</p>
+                <p>User experience is a very important aspect of website design. Your website visitors must be given the best possible experience when browsing your website, in order to keep engagement high and bounce rates low. In this article, I discussed tips and advice on how to improve your website's user experience. If you need support with this area, please feel free to <a href="mailto:info@sybiltec.com" target="_blank">contact us</a>.</p>
 
             </div>
         </div>
@@ -285,11 +290,11 @@ permalink: /user-experience-ux/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
