--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -118,6 +118,11 @@ permalink: /web-design-bexley/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -420,20 +425,30 @@ permalink: /web-design-bexley/
 
                 <div class="row">
                     <div class="col-6">
-                        <p><em>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</em></p>
-                        <p>Natalie Wright, Finance Director, LD Tiling Contractors</p>
+                        <div class="testimonial-card">
+                            <p><strong><em>Natalie Wright, Finance Director, LD Tiling Contractors</em></strong></p>
+                            <p>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</p>
+                        </div>
                     </div>
                     <div class="col-6">
-                        <p><em>I would highly recommend Sybil; she listens and completely understands what I am asking for. Her knowledge of Shopify is excellent and she knows how to implement what I need.</em></p><p>Caroline Wardell, Founder, The Bamboo Wardrobe</p>
+                        <div class="testimonial-card">
+                            <p><strong><em>Caroline Wardell, Founder, The Bamboo Wardrobe</em></strong></p>
+                            <p>I would highly recommend Sybil; she listens and completely understands what I am asking for. Her knowledge of Shopify is excellent and she knows how to implement what I need.</p>
+                        </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-6">
-                        <p><em>Sybil is one of those people who are very rare! She is a gem! Not only does Sybil create beautiful websites-they are EXACTLY in detail-what you ask for!</em></p><p>Patricia Byrne, CEO, Happily Clappily Ever Laughter</p>
+                        <div class="testimonial-card">
+                            <p><strong><em>Patricia Byrne, CEO, Happily Clappily Ever Laughter</em></strong></p>
+                            <p>Sybil is one of those people who are very rare! She is a gem! Not only does Sybil create beautiful websites-they are EXACTLY in detail-what you ask for!</p>
+                        </div>
                     </div>
                     <div class="col-6">
-                        <p><em>I would highly recommend Sybil, she is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon free and understandable.</em></p><p>Gary Parker, Managing Director, CNT Associates</p>
+                        <div class="testimonial-card">
+                            <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
+                            <p>Sybil is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon free and understandable.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -445,11 +460,11 @@ permalink: /web-design-bexley/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
