--- a/website-design.html
+++ b/website-design.html
@@ -32,13 +32,13 @@ permalink: /website-design/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web Design for Small Businesses, SMEs and Startups | Sybiltec</title>       
-        <meta name="Description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation.">
+        <meta name="Description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact us today for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-design/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Web Design for Small Businesses, SMEs and Startups | Sybiltec" />
-        <meta property="og:description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation." />
+        <meta property="og:description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact us today for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/website-design/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -118,6 +118,11 @@ permalink: /website-design/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <div class="container-1140">
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+            </div>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -187,7 +192,7 @@ permalink: /website-design/
                 <h2>The Process</h2>
                 <p>Firstly, your requirements will be gathered. This is a very important step in the process, as it helps me (and you) to understand your business goals and what you hope to achieve by building a website. By working on this step together, I can create a stategy which best meets your needs.</p>
 
-                <p>We will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you via a <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link - this is a prototype which you can interact with, and which looks similar to the actual website to be developed. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>We will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! we will take you through the process of creating suitable designs that reflect your business's values. we will present the website designs to you via a <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link - this is a prototype which you can interact with, and which looks similar to the actual website to be developed. Once you are happy with the designs, we will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
                 <h2>Web Design Clients</h2>
                 <p>Take a look at the examples below of websites I have designed for past clients. All of these clients benefitted from a bespoke website design which allowed the businesses to showcase their products and services at their best.</p>
@@ -409,11 +414,11 @@ permalink: /website-design/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <h3>Would You Like To Start A Project With Us?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
                     </div>
                 </div>
                 </div>
